# caboodle

backend/: .env.example  .env.pgadmin.example  .env.postgres.example  .env.rabbitmq.example  .env.redis.example  .gitignore  alembic.ini  celeryconfig.py  docker-compose.yml  pyproject.toml
backend/backend/: app.py  celeryapp.py  celeryconfig.py  settings.py
backend/backend/alembic/: env.py  utils.py
backend/backend/alembic/versions/: 0b05c6a4c96e_create_snapshots_table.py  29a40ae69846_create_urls_table.py  32e134eed18d_create_user_role_table.py  41e38c7dfdf9_create_bookmark_tag_table.py  5754b3a725a3_create_tags_table.py  725f2e0feef3_create_role_permission_table.py  873d38b9d3e5_create_collection_bookmark_table.py  9e25beaabd01_create_collections_table.py  b978ac64a6f9_create_bookmarks_table.py  bb9231b718ca_create_resources_table.py  d45fed8eb9d2_create_users_table.py  df96d01155f3_create_permissions_table.py  fbfd7c3bf9f9_create_roles_table.py
backend/backend/common/: cache.py  constants.py  database.py  dependencies.py  files.py  models.py  schema.py  session.py  utils.py
backend/backend/common/dao/: bookmarks.py  mybookmarks.py  resources.py  users.py
backend/backend/common/security/: constants.py  utils.py
backend/backend/endpoints/: __init__.py  auth.py  mybookmarks.py  profile.py
backend/backend/tasks/utils/: browser.py  downloader.py  scraper.py
backend/tests/: conftest.py
backend/tests/common/: test_cache.py  test_dependencies.py  test_security.py  test_session.py  test_utils.py
backend/tests/endpoints/: test_auth.py
frontend/: .gitignore  (+4 more)
(+90 files in other folders)
